# ElGamal

./: CMakeLists.txt  README.md
src/: ElGamal.hpp  cramer_shoup.hpp  hashed_ElGamal.hpp  main.cpp  twin_hashed_ElGamal.hpp
src/curve/: curve.hpp
